feat: add detailed Javadoc comments for various classes and methods to enhance code documentation